--- a/app/src/main/res/layout/fragment_groups.xml
+++ b/app/src/main/res/layout/fragment_groups.xml
@@ -13,9 +13,9 @@
             android:id="@+id/textView3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Iluz Gay"
+            android:text="Groups"
             android:textSize="72sp"
-            tools:layout_editor_absoluteX="105dp"
-            tools:layout_editor_absoluteY="353dp" />
+            tools:layout_editor_absoluteX="89dp"
+            tools:layout_editor_absoluteY="316dp" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
