--- a/app/src/main/res/layout/popup_add_post.xml
+++ b/app/src/main/res/layout/popup_add_post.xml
@@ -6,17 +6,6 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <ImageView
-        android:background="#ffffff"
-        android:id="@+id/popup_user_image"
-        android:layout_width="48dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toTopOf="@+id/popup_description"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/popup_title"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:srcCompat="@tools:sample/avatars[0]" />
-
     <EditText
         android:id="@+id/popup_title"
         android:layout_width="0dp"
@@ -25,8 +14,8 @@
         android:ems="10"
         android:hint="Title"
         android:inputType="textPersonName"
-        app:layout_constraintEnd_toStartOf="@+id/popup_user_image"
-        app:layout_constraintHorizontal_bias="0.0"
+        android:maxLength="50"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
