--- a/app/src/main/res/layout/fragment_post.xml
+++ b/app/src/main/res/layout/fragment_post.xml
@@ -57,7 +57,7 @@
 
     <ImageView
         android:id="@+id/post_img"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="250dp"
         android:layout_marginTop="48dp"
         app:layout_constraintEnd_toEndOf="parent"
